# MinuteDB

./: .gitignore  LICENSE  README.md  build_instruction.md  setup.cfg  setup.py
src/minutedb/: __init__.py  minutedb.py  utils.py
tests/: test_minutedb.py
