[metadata]
name = MinuteDB
version = 0.0.3
author = Sandip Karar
author_email = sandeep7632@gmail.com
description = MinuteDB is a simple local database written in Python that provides basic CRUD (Create, Read, Update, Delete) operations on a local file-based database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandeepgit32/MinuteDB.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    filelock
test_suite = tests

[options.packages.find]
where = src